--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,24 +6,13 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Joom
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
-    body 
+    body
         header
             h1 Joom
-        main 
-            div#welcome 
-                form 
-                    input(placeholder="room name", required, type="text")
-                    button Enter Room
-                h4 Open Rooms:
-                ul
-            div#room
-                h3
-                ul 
-                form#name
-                    input(placeholder="nickname", required, type="text")
-                    button Save
-                form#msg
-                    input(placeholder="message", required, type="text")
-                    button Send
-        script(src="/socket.io/socket.io.js")
-        script(src="/public/js/app.js")
+        main
+            div#myStream
+                video#myFace(autoplay,playsinline, muted, width="400", height="400")
+                button#mute Mute
+                button#camera Turn Camera Off
+        script(src="/socket.io/socket.io.js") 
+        script(src="/public/js/app.js") 
